--- a/table/static/css/table.css
+++ b/table/static/css/table.css
@@ -1,9 +1,34 @@
 /* CSS for TableXBlock */
 
-.table_block .count {
-    font-weight: bold;
+.table_block{
+	overflow: hidden;
 }
 
-.table_block p {
-    cursor: pointer;
+.table_block .row{
+	width: 100%;
+	clear: both;
+	float: left;
+	overflow: hidden;
+}
+
+.table_block .cell{
+	width: 25%;
+	float: left;
+}
+
+.table_block .header{
+	font-weight: bold;
+}
+.table_block .bottom{
+	margin: 0 0 20px 0;
+}
+.table_block .parent{
+	text-align: center;
+	background: #f4f4f4;
+	padding: 10px;
+	border-radius: 4px;
+}
+
+.table_block input[type="text"]{
+	padding: 5px;
 }
