--- a/table/static/css/table.css
+++ b/table/static/css/table.css
@@ -9,6 +9,7 @@
 	clear: both;
 	float: left;
 	overflow: hidden;
+	min-height: 30px;
 }
 
 .table_block .cell{
@@ -31,4 +32,33 @@
 
 .table_block input[type="text"]{
 	padding: 5px;
+}
+#table_modal{
+	width: 50%;
+	height: 500px;
+	top: 50%;
+	left: 50%;
+	
+	margin-left: -25%;
+	margin-top: -250px;
+	
+	overflow-y: auto;
+	position: fixed;
+	z-index: 100000;
+	border: 1px solid #eee;
+	background: #f9f9f9;
+	padding: 20px;
+}
+#table_overlay{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin: 0;
+	padding: 0;
+	z-index: 99;
+	background: #eee;
+	opacity: .65;
+	cursor: pointer;
 }
