--- a/table/static/css/table.css
+++ b/table/static/css/table.css
@@ -1,5 +1,9 @@
 /* CSS for TableXBlock */
 
+button{
+	cursor: pointer;
+}
+
 .table_block{
 	overflow: hidden;
 }
@@ -10,10 +14,11 @@
 	float: left;
 	overflow: hidden;
 	min-height: 30px;
+	margin-top: 10px;
 }
 
 .table_block .cell{
-	width: 25%;
+	width: 40%;
 	float: left;
 }
 
@@ -33,6 +38,28 @@
 .table_block input[type="text"]{
 	padding: 5px;
 }
+
+.modal_footer{
+	position: absolute;
+	height: 80px;
+	width: 100%;
+	top: 100%;
+	margin: -80px 0 0 0;
+	background: #eee;
+	border-top: 1px solid #ddd;
+	padding: 20px 0 0 45%;
+}
+
+.modal_container{
+	padding: 20px;
+	overflow: auto;
+}
+
+.table_block .editable{
+	border-bottom: 1px dashed #3B80C3;
+	cursor: text;
+}
+
 #table_modal{
 	width: 50%;
 	height: 500px;
@@ -45,9 +72,11 @@
 	overflow-y: auto;
 	position: fixed;
 	z-index: 100000;
-	border: 1px solid #eee;
 	background: #f9f9f9;
-	padding: 20px;
+	overflow: hidden;
+	
+	border: 1px solid #999;
+	border-radius: 5px;
 }
 #table_overlay{
 	width: 100%;
@@ -58,7 +87,7 @@
 	margin: 0;
 	padding: 0;
 	z-index: 99;
-	background: #eee;
-	opacity: .65;
+	background: #000;
+	opacity: .45;
 	cursor: pointer;
 }
