--- a/table/static/css/table.css
+++ b/table/static/css/table.css
@@ -37,7 +37,7 @@ h3{
 }
 
 .table_block .green{
-	background: rgb(199, 255, 185);
+	background: #EEFFEA;
 	padding: 10px 0 10px 0;
 	margin-top: 0;
 }
