--- a/table/static/css/table.css
+++ b/table/static/css/table.css
@@ -137,13 +137,13 @@ h3{
 #table_overlay{
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	margin: 0;
 	padding: 0;
 	z-index: 99;
 	background: #000;
-	opacity: .45;
+	opacity: .30;
 	cursor: pointer;
 }
